Trunk
=====

- minor fix for mixed emails : the good mime type is multipart/related

1.1.3, 2011/09/15
=================

- Fix https://github.com/numericube/twistranet/issues/27
 (submit comment button disappears after a wall reload)

- Fix https://github.com/numericube/twistranet/issues/31
  (stop walls reload when a comment form is not empty)

- Do not erase comment text field when clicking on "show all comments"

- Now the number of comments is more visible
  see ticket https://github.com/numericube/twistranet/issues/24

1.1.2, 2011/08/30
=================

- Fix ticket https://github.com/numericube/twistranet/issues/7

- Fix ticket https://github.com/numericube/twistranet/issues/28

- Open external links in new window, new local setting true/false added
  first part of ticket https://github.com/numericube/twistranet/issues/23

1.1.1, 2011/07/29
==================

- fix sorl thumbnail error with CMJK images
  https://github.com/numericube/twistranet/issues/22

1.1.0, 2011/05/16
==================

- Implemented TAGS for Twistable objects. Now you can tag your objects to specify what they represent.

- Implemented Sharing api, first application : "Like" "Unlike"

- Menus Bar edition (inspired from wordpress navigation.js)

- We can drag and drop files anywhere (first application : on statusupdate textarea)

- Ajax Walls : post / delete / reload / batch / comments / like / unlike / ....



0.9.0, 2011/02/25 -- Initial public release
===========================================


0.9.0-alpha, 2010/12/02 -- Initial release.
===========================================

